<resources>
    <string name="app_name">Exchange Rates</string>
    <string name="choose_currency_type">Choose currency type</string>
    <string name="last_update">last updated</string>
    <string name="today">Today</string>
    <string name="enter_currency">Enter currency</string>
    <string name="prefix_exchange_rates_title">Exchange Rates for</string>
    <string name="search">Search</string>
    <string name="rates_download_description">Downloading Excehange Rates</string>
    <string name="empty_exchange_rates">Empty Exchange Rates</string>
    <string name="empty_currencies">Empty Currencies</string>
    <string name="currencies_download_description">Downloading Currencies</string>
    <string name="rate_equal">=</string>
    <string name="default_currency_hint">1.00</string>
    <string name="empty_last_update_date">- - -</string>
    <string name="no_internet_connection">No Internet Connection!</string>
    <string name="try_again">Try Again</string>
    <string name="exit">Exit</string>
    <string name="cancel">Cancel</string>
    <string name="updating">Updating..</string>
    <string name="prefix_version">Version</string>
    <string name="item_select_error">Item Select Error</string>
    <string name="server_error_description">Internal Server Error!</string>
</resources>