<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/gray_100"
    >

    <FrameLayout
        android:id="@+id/fl_toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:background="?colorPrimary"
        >

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/btn_navigate_back"
            android:layout_width="@dimen/icon_size"
            android:layout_height="@dimen/icon_size"
            android:layout_marginVertical="@dimen/margin_small"
            android:layout_marginStart="@dimen/margin_medium"
            android:layout_marginLeft="@dimen/margin_medium"
            android:background="?selectableItemBackgroundBorderless"
            android:scaleType="centerInside"
            android:src="@drawable/ic_arrow_back"
            android:tint="@color/gray_600"
            />

        <TextView
            android:id="@+id/tv_choose_currency_type"
            style="?textAppearanceHeadline6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/choose_currency_type"
            />
    </FrameLayout>

    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/linear_search"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/fl_toolbar"
        android:layout_marginHorizontal="@dimen/margin_large"
        android:layout_marginTop="@dimen/margin_medium"
        android:background="@color/white_alpha50"
        >

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/imv_search"
            android:layout_width="@dimen/icon_size"
            android:layout_height="@dimen/icon_size"
            android:layout_marginVertical="@dimen/margin_small"
            android:layout_marginStart="@dimen/margin_medium"
            android:layout_marginLeft="@dimen/margin_small"
            android:scaleType="centerInside"
            android:src="@drawable/ic_search"
            />

        <androidx.appcompat.widget.AppCompatEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="@dimen/margin_small"
            android:layout_marginLeft="@dimen/margin_small"
            android:layout_marginEnd="@dimen/margin_medium"
            android:layout_marginRight="@dimen/margin_medium"
            android:background="@android:color/transparent"
            android:hint="@string/search"
            android:paddingVertical="@dimen/margin_small"
            android:textAppearance="?textAppearanceBody1"
            />
    </androidx.appcompat.widget.LinearLayoutCompat>

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/imv_dollar"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_below="@id/linear_search"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/margin_large"
        android:src="@drawable/ic_dollar"
        android:tint="@color/gray_300"
        android:visibility="invisible"
        />

    <TextView
        android:id="@+id/tv_empty_currencies"
        style="?textAppearanceHeadline5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/imv_dollar"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/margin_medium"
        android:text="@string/empty_currencies"
        android:textColor="@color/gray_300"
        android:visibility="invisible"
        />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_currencies"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/linear_search"
        android:layout_marginHorizontal="@dimen/margin_medium"
        android:layout_marginTop="@dimen/margin_small"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        tools:listitem="@layout/item_currency_type"
        />

</RelativeLayout>